--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
 <meta charset="UTF-8">
 <title>Accumbens</title>
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
-<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Varela+Round'>
-<link rel='stylesheet' href='http://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css">
+<link rel='stylesheet' href='//fonts.googleapis.com/css?family=Varela+Round'>
+<link rel='stylesheet' href='//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css'>
 <style>
 body {
   background: #48d2bd;
@@ -107,8 +107,8 @@ body {
     </ul>
   </div>
 </div>
-<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/169963/scrollReveal.min.js'></script>
+<script src='//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='//s3-us-west-2.amazonaws.com/s.cdpn.io/169963/scrollReveal.min.js'></script>
 <script>
 // Scroll Reveal
 window.sr = new scrollReveal(config);
