--- a/index.html
+++ b/index.html
@@ -95,12 +95,12 @@ body {
   <div class='social-media'>
     <ul>
       <li data-sr='top wait 1.8s 90px'>
-        <a href='https://www.facebook.com/'>
+        <a target='_blank' href='https://www.facebook.com/'>
           <i class='fa fa-facebook'></i>
         </a>
       </li>
       <li data-sr='top wait 1.9s 90px'>
-        <a href='https://www.instagram.com/'>
+        <a target='_blank' href='https://www.instagram.com/accumbens2k19/'>
           <i class='fa fa-instagram'></i>
         </a>
       </li>    
