--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ body {
   <div class='social-media'>
     <ul>
       <li data-sr='top wait 1.8s 90px'>
-        <a target='_blank' href='https://www.facebook.com/'>
+        <a target='_blank' href='https://www.facebook.com/accumbens2018/'>
           <i class='fa fa-facebook'></i>
         </a>
       </li>
