--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ body {
 <body>
   <div class='container'>
   <h1>
-    <a data-sr='scale up 10%' href='https://accumbens.io'>Accumbens.in</a>
+    <a data-sr='scale up 10%' href='https://accumbens.in'>Accumbens.in</a>
     <span data-sr='top wait .3s 90px'>i</span>
     <span data-sr='top wait .4s 90px'>s</span>
     <span>&nbsp;</span>
