updated icons and added section

--- a/contact.html
+++ b/contact.html
@@ -124,7 +124,7 @@
                         </div>
                         <main id="main" class="site-main">
                             <div class="go--form mobileVariant">
-                                <a href="#"> <i class="icon-pen"> </i> </a>
+                                <a href="#"> <i class="far fa-envelope-open"></i> </a>
                             </div>
                             <section class="section" id="contact--section">
                                 <div class="inner">
