--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                                  <div class="arrow--right"><i class="fas fa-angle-right"></i></div>
                               </div>
                            </section>
-                           <!--<section class="section" id="section3">
+                           <section class="section" id="section3">
                               <div class="inner">
                                  <div class="container-fluid">
                                     <div class="row">
@@ -302,7 +302,7 @@
                                  <div class="arrow--left"> <i class="icon-arrow-left-thin"></i></div>
                                  <div class="arrow--right"> <i class="icon-arrow-right-thin"></i></div>
                               </div>
-                           </section>-->
+                           </section>
                            <!--<section class="section" id="section4">
                               <div class="inner">
                                  <div class="container-fluid">
