--- a/index.html
+++ b/index.html
@@ -114,42 +114,6 @@
                      <main id="main" class="site-main">
                         <div id="fullpage">
                            <section class="section" id="section1">
-                              <div class="pluses movePluses">
-                                 <div>
-                                    <div class="plus standard position1">
-                                       <div class="line hori"></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                    <div class="plus small position2">
-                                       <div class="line hori"></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                    <div class="plus big position3">
-                                       <div class="line hori"></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                 </div>
-                              </div>
-                              <div class="plusesSecond  movePluses">
-                                 <div>
-                                    <div class="plus standard position4">
-                                       <div class="line hori"></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                    <div class="plus small position5">
-                                       <div class="line hori "></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                    <div class="plus big position6">
-                                       <div class="line hori"></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                    <div class="plus small position7">
-                                       <div class="line hori "></div>
-                                       <div class="line vert"></div>
-                                    </div>
-                                 </div>
-                              </div>
                               <div id="herosplash" class="easteregg">
                                  <div id="hypno">
                                     <div><span><span><span><span><span><span><span><span><span><span></span></span></span></span></span></span></span></span></span></span></div>
@@ -210,13 +174,13 @@
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent3">
                                                 <span class="number-of-slide"> 04 </span>
                                                 <h3>Help & Contact</h3>
-                                                <span class="slide--divider"></span> <a class="read--more" href="https://www.media-tree.com/logistics-support/">Read more</a>
+                                                <span class="slide--divider"></span> <a class="read--more" href="/contact">Read more</a>
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent4">
                                                 <span class="number-of-slide"> 05 </span>
                                                 <h3>Online Register</h3>
                                                 <span class="slide--divider"></span>
-                                                <a class="read--more" href="https://www.media-tree.com/presentation-support/">Read more</a>
+                                                <a class="read--more" href="/register">Read more</a>
                                              </div>
                                           </div>
                                        </div>
@@ -228,7 +192,7 @@
                                  <div class="arrow--right"><i class="fas fa-angle-right"></i></div>
                               </div>
                            </section>
-                           <section class="section" id="section3">
+                           <!--<section class="section" id="section3">
                               <div class="inner">
                                  <div class="container-fluid">
                                     <div class="row">
@@ -302,7 +266,7 @@
                                  <div class="arrow--left"> <i class="icon-arrow-left-thin"></i></div>
                                  <div class="arrow--right"> <i class="icon-arrow-right-thin"></i></div>
                               </div>
-                           </section>
+                           </section>-->
                            <!--<section class="section" id="section4">
                               <div class="inner">
                                  <div class="container-fluid">
