updated background color

--- a/index.html
+++ b/index.html
@@ -119,6 +119,42 @@
                                     <div><span><span><span><span><span><span><span><span><span><span></span></span></span></span></span></span></span></span></span></span></div>
                                  </div>
                               </div>
+                              <div class="pluses movePluses">
+                                <div>
+                                   <div class="plus standard position1">
+                                      <div class="line hori"></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                   <div class="plus small position2">
+                                      <div class="line hori"></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                   <div class="plus big position3">
+                                      <div class="line hori"></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                </div>
+                             </div>
+                             <div class="plusesSecond  movePluses">
+                                <div>
+                                   <div class="plus standard position4">
+                                      <div class="line hori"></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                   <div class="plus small position5">
+                                      <div class="line hori "></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                   <div class="plus big position6">
+                                      <div class="line hori"></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                   <div class="plus small position7">
+                                      <div class="line hori "></div>
+                                      <div class="line vert"></div>
+                                   </div>
+                                </div>
+                             </div>
                            </section>
                            <section class="section" id="section2">
                               <div class="inner">
@@ -173,7 +209,7 @@
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent3">
                                                 <span class="number-of-slide"> 04 </span>
-                                                <h3>Help & Contact</h3>
+                                                <h3>Any Queries</h3>
                                                 <span class="slide--divider"></span> <a class="read--more" href="/contact">Read more</a>
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent4">
