updated sponsors & about

--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent1">
                                                 <span class="number-of-slide"> 02 </span>
-                                                <h3>About Events</h3>
+                                                <h3>Event Details</h3>
                                                 <span class="slide--divider"></span>
                                                 <a class="read--more" href="/events">Read more</a>
                                              </div>
