UPDATED EVENTS & REGISTRATION

--- a/register.html
+++ b/register.html
@@ -83,7 +83,7 @@
 <body>
     <div class='container'>
         <h1>
-            <a data-sr='scale up 10%' href='https://accumbens.in'>Accumbens.in</a>
+            <a data-sr='scale up 10%' href='https://accumbens.in'>Registration</a>
             <span data-sr='top wait .3s 90px'>i</span>
             <span data-sr='top wait .4s 90px'>s</span>
             <span>&nbsp;</span>
@@ -100,7 +100,7 @@
             <span data-sr='top wait 1.4s 90px'>n</span>
             <span data-sr='top wait 1.5s 90px'>!</span>
         </h1>
-        <p data-sr='bottom wait 1.5s 90px'>Please check back with us in the near future for updates.</p>
+        <p data-sr='bottom wait 1.5s 90px'>Registration will be opened by April 25th 2019. Come back on April 25th 2019</p>
         <div class='social-media'>
             <ul>
                 <li data-sr='top wait 1.8s 90px'>
