--- a/events.html
+++ b/events.html
@@ -156,11 +156,11 @@
                                                                 </br>Registration for EARLY BIRD - <b>Rs 300, </b></br>LATE BIRD -<b> Rs 400.</b>
                                                             </li>
                                                             <li>
-                                                                Case Presenation on topic you choice, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b>.
+                                                                Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b>.
                                                                 </br>Registration for EARLY BIRD -<b> Rs 300, </b></br>LATE BIRD - <b>Rs 400.</b>
                                                             </li>
                                                             <li>
-                                                                Poster Presenation on topic you choice, Reveal your talent and win prizes worth over <b>Rs 5,000</b>.
+                                                                Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b>.
                                                                 </br>Registration for EARLY BIRD - <b>Rs 300, </b></br>LATE BIRD - Rs 400.</b>
                                                             </li>
                                                         </ol>
