--- a/events.html
+++ b/events.html
@@ -153,21 +153,21 @@
                                                             <li>
                                                                 Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K.
                                                                 </br>1st Prize - <b>Rs.30,000/-</b></br>2nd Prize - <b>Rs.20,000/-</b></br>3rd Prize - <b>Rs.10,000/-</b>
-                                                                </br>Registration for EARLY BIRD - <b>Rs 300, </b></br>LATE BIRD -<b> Rs 400.</b>
+                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- & </b></br>LATE BIRD -<b> Rs 400/-</b>
                                                             </li>
                                                             <li>
                                                                 Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b>.
-                                                                </br>Registration for EARLY BIRD -<b> Rs 300, </b></br>LATE BIRD - <b>Rs 400.</b>
+                                                                </br>Registration price for EARLY BIRD -<b> Rs 300/- & </b></br>LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                             <li>
                                                                 Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b>.
-                                                                </br>Registration for EARLY BIRD - <b>Rs 300, </b></br>LATE BIRD - Rs 400.</b>
+                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- & </b></br>LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                         </ol>
                                                         <p><b>NOTE:</b></p>
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                Registration will be opened by April 25th 2019.
+                                                                Online Registration will be opened by April 25th 2019.
                                                             </li>
                                                             <li>
                                                                 EARLY BIRD : April 25th 2019 to May 25th 2019.
@@ -179,7 +179,7 @@
                                                                 Last Date for Registration is June 5th 2019.
                                                             </li>
                                                             <li>
-                                                                Spot Registration will Cost Rupees 500.
+                                                                <b>Spot Registration will Cost Rs.500/-</b>
                                                             </li>
                                                         </ol>
                                                     </div>
@@ -192,7 +192,7 @@
                                                                 <b>Surgery - Argor :</b> Suturing, Endoscopy
                                                             </li>
                                                             <li>
-                                                                <b>Medical - Arima :</b> Arterial Blood Gas Analysis, CNS Case Discussion
+                                                                <b>Medical - Arima :</b> Arterial Blood Gas Analysis, Case Discussion
                                                             </li>
                                                             <li>
                                                                 <b>Psychiatry - Ariston :</b> Behavioral Therapy on Substance Abuse, Sex Education, Digital Detoxification
@@ -233,7 +233,6 @@
                                                          <ul>
                                                             <li class="p1">Each team should comprise of 3 participants , there are no limits for the number of teams from each college</li>
                                                             <li class="p1">All teams are to bring their ID cards for verification.</li>
-                                                            <li class="p1">Registration fee for each team is Rs.300 </li>
                                                             <li class="p1">First stage will be the prelims followed by the second round of onstage quiz consisting of six teams.</li>
                                                          </ul>
                                                       </div>
