--- a/events.html
+++ b/events.html
@@ -153,15 +153,15 @@
                                                             <li>
                                                                 Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K.
                                                                 </br>1st Prize - <b>Rs.30,000/-</b></br>2nd Prize - <b>Rs.20,000/-</b></br>3rd Prize - <b>Rs.10,000/-</b>
-                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- & </b></br>LATE BIRD -<b> Rs 400/-</b>
+                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                             <li>
                                                                 Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b>.
-                                                                </br>Registration price for EARLY BIRD -<b> Rs 300/- & </b></br>LATE BIRD - <b>Rs 400/-</b>
+                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                             <li>
                                                                 Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b>.
-                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- & </b></br>LATE BIRD - <b>Rs 400/-</b>
+                                                                </br>Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                         </ol>
                                                         <p><b>NOTE:</b></p>
