--- a/contact.html
+++ b/contact.html
@@ -187,7 +187,7 @@
                                                             <p>+91 8072924935</p>
                                                         </div>
                                                         <div class="hideonDesktop">
-                                                            <p><a href="tel:+91 999 452 49 77">+91 9994524977</a></p>
+                                                            <p><a href="tel:+91 8072924935">+91 8072924935</a></p>
                                                         </div>
                                                     </div>
                                                     <div class="contact--box_address">
@@ -198,7 +198,7 @@
                                                             <p>+91 9994524977</p>
                                                         </div>
                                                         <div class="hideonDesktop">
-                                                            <p><a href="tel:+91 999 452 49 77">+91 9994524977</a></p>
+                                                            <p><a href="tel:+91 9994524977">+91 9994524977</a></p>
                                                         </div>
                                                     </div>
                                                 </div>
