--- a/contact.html
+++ b/contact.html
@@ -267,7 +267,29 @@
                                                         <h2>Workshop Detail's</h2>
                                                     </div>
                                                     <div class="contact--box_address">
-                                                        <p>Keerthana K</p>
+                                                        <p>Nithisha</p>
+                                                    </div>
+                                                    <div class="contact--box_phone">
+                                                        <div class="hideonMobile">
+                                                            <p>+91 9003119924</p>
+                                                        </div>
+                                                        <div class="hideonDesktop">
+                                                            <p><a href="tel:+91 9003119924">+91 9003119924</a></p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="contact--box_address">
+                                                        <p>Mahima</p>
+                                                    </div>
+                                                    <div class="contact--box_phone">
+                                                        <div class="hideonMobile">
+                                                            <p>+91 9072549077</p>
+                                                        </div>
+                                                        <div class="hideonDesktop">
+                                                            <p><a href="tel:+91 9072549077">+91 9072549077</a></p>
+                                                        </div>
+                                                    </div>
+                                                    <div class="contact--box_address">
+                                                        <p>Keerthana Kanya</p>
                                                     </div>
                                                     <div class="contact--box_phone">
                                                         <div class="hideonMobile">
