--- a/events.html
+++ b/events.html
@@ -151,16 +151,16 @@
                                                     <div class="box--post_short_description">
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K.</br>Section A - Quiz on "Integrated Pathology" at (9.00AM to 10.00AM), Final Rounds at (1.30PM to 3.30PM)
+                                                                Section A - Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K.</br>Starts at (9.00AM to 10.00AM), Final Rounds at (1.30PM to 3.30PM)
                                                                 </br>1st Prize - <b>Rs.30,000/-</b></br>2nd Prize - <b>Rs.20,000/-</b></br>3rd Prize - <b>Rs.10,000/-</b>
                                                                 </br>Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                             <li>
-                                                                Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b></br>Section B - Case Presenation at (10.30AM to 12.30PM)</br>
+                                                                Section B - Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b></br>Starts at (10.30AM to 12.30PM)</br>
                                                                 Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                             <li>
-                                                                Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b></br>Section C - Poster Presenation at (10.30AM to 12.30PM)</br>
+                                                                Section C - Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b></br>Starts at (10.30AM to 12.30PM)</br>
                                                                 Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                         </ol>
@@ -179,7 +179,7 @@
                                                                 Last Date for Registration is June 5th 2019.
                                                             </li>
                                                             <li>
-                                                                In Case & Poster Presentation -  One can participate either in <b>'Case Presentation'</b> or <b>'Poster Presentation'</b>.
+                                                                One can participate either in Section 'B' or 'C', Due to both events occur at the same time.
                                                             </li>
                                                             <li>
                                                                 <b>Spot Registration</b> will Cost <b>Rs.500/-</b>
