--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,15 @@
     <link type="text/css" media="all" href="./css/main.css" rel="stylesheet" />
     <title>Accumbens</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+          <!-- Global site tag (gtag.js) - Google Analytics -->
+          <script async src="https://www.googletagmanager.com/gtag/js?id=UA-138937601-1"></script>
+          <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+    
+          gtag('config', 'UA-138937601-1');
+          </script>
 </head>
 <div class="loading">
     <div class="pluses">
