updated registration form

--- a/contact.html
+++ b/contact.html
@@ -276,7 +276,7 @@
                                                         <h2>Workshop Detail's</h2>
                                                     </div>
                                                     <div class="contact--box_address">
-                                                        <p>Nithisha</p>
+                                                        <p>Nithiksha</p>
                                                     </div>
                                                     <div class="contact--box_phone">
                                                         <div class="hideonMobile">
