--- a/events.html
+++ b/events.html
@@ -188,7 +188,7 @@
                                                                 Last Date for Registration is June 5th 2019.
                                                             </li>
                                                             <li>
-                                                                One can participate either in Section 'B' or 'C', Due to both events occur at the same time.
+                                                                One can participate either in Section 'B' or 'C', Since both events occur at the same time.
                                                             </li>
                                                             <li>
                                                                 <b>Spot Registration</b> will Cost <b>Rs.500/-</b>
