updated quiz status

--- a/events.html
+++ b/events.html
@@ -160,7 +160,7 @@
                                                     <div class="box--post_short_description">
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                Section A - Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K.</br>Starts at (9.00AM to 10.00AM), Final Rounds Starts at Afternoon Section
+                                                                Section A - Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K.</br>Starts at (9.00AM to 10.00AM)
                                                                 </br>1st Prize - <b>Rs.30,000/-</b></br>2nd Prize - <b>Rs.20,000/-</b></br>3rd Prize - <b>Rs.10,000/-</b>
                                                                 </br>Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
