--- a/register.html
+++ b/register.html
@@ -169,7 +169,7 @@
                                                                 Enter your basic information and Select the events your going to participate. 
                                                             </li>
                                                             <li>
-                                                                Select Yes, to participate in Pathology quiz (Section A) Starts at (9.00AM to 10.00AM), Final Rounds Starts at Afternoon Section.
+                                                                Select Yes, to participate in Pathology quiz (Section A) Starts at (9.00AM to 10.00AM).
                                                             </li> 
                                                             <li>
                                                                 Select Case or Poster Presenation, You can choose either one in Case Presenation or Poster Presenation, Since both events occur at the same time. Starts at (10.30AM to 12.30PM)
