--- a/events.html
+++ b/events.html
@@ -165,19 +165,14 @@
                                                                 </br>Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
                                                             </li>
                                                             <li>
-                                                                Section B - Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b></br>Starts at (10.30AM to 12.30PM)</br>
-                                                                Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
+                                                                Section B - Case Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000/-</b></br>starts at (10.00AM to 12.30PM)
                                                             </li>
                                                             <li>
-                                                                Section C - Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b></br>Starts at (10.30AM to 12.30PM)</br>
-                                                                Registration price for EARLY BIRD - <b>Rs 300/- </b> and for LATE BIRD - <b>Rs 400/-</b>
+                                                                Section C - Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b></br>Starts at (10.00AM to 12.30PM)
                                                             </li>
                                                         </ol>
                                                         <p><b>NOTE:</b></p>
                                                         <ol class="p" style="padding-left:15px;">
-                                                            <li>
-                                                                Online Registration will be opened by April 25th 2019.
-                                                            </li>
                                                             <li>
                                                                 EARLY BIRD : April 25th 2019 to May 25th 2019.
                                                             </li>
@@ -188,7 +183,7 @@
                                                                 Last Date for Registration is June 5th 2019.
                                                             </li>
                                                             <li>
-                                                                One can participate either in Section 'B' or 'C', Since both events occur at the same time.
+                                                               Case & Poster Presenation, Last Date to Submit Abstract is 25th May 2019.
                                                             </li>
                                                             <li>
                                                                 <b>Spot Registration</b> will Cost <b>Rs.500/-</b>
@@ -236,7 +231,7 @@
                                                    </div>
                                                    <div id="collapse1" class="collapse" aria-labelledby="heading1" data-parent="#accordion">
                                                       <div class="card-body">
-                                                         <p class="p1">Intercollegiate Quiz on "Integrated Pathology", Seize the opportunity and win prizes over 80K</p>
+                                                         <p class="p1">Intercollegiate Quiz on "Integrated Pathology", Event will be held on 12th June 2019,from 9.00AM to 10.00AM</p>
                                                          <h5>Topic :</h5>
                                                          <p class="p1">Integrated pathology</p>
                                                          <h5>Eligible Candidates :</h5>
@@ -256,7 +251,7 @@
                                                    </div>
                                                    <div id="collapse2" class="collapse" aria-labelledby="heading2" data-parent="#accordion">
                                                       <div class="card-body">
-                                                         <p class="p1">Event will be held on 12th June 2019, from 10:30am to 12:30am</p>
+                                                         <p class="p1">Event will be held on 12th June 2019, from 10:00AM to 12:30PM</p>
                                                          <h5>Topic :</h5>
                                                          <p class="p1">On the topic of your choice</p>
                                                          <h5>Rules :</h5>
@@ -284,7 +279,7 @@
                                                    </div>
                                                    <div id="collapse3" class="collapse" aria-labelledby="heading3" data-parent="#accordion">
                                                       <div class="card-body">
-                                                            <p class="p1">Event will be held on 12th June 2019, from 10:30am to 12:30am</p>
+                                                            <p class="p1">Event will be held on 12th June 2019, from 10:00AM to 12:30PM</p>
                                                             <h5>Topic :</h5>
                                                             <p class="p1">On the topic of your choice</p>
                                                             <h5>Rules :</h5>
