--- a/register.html
+++ b/register.html
@@ -166,14 +166,8 @@
                                                                 Click on the <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> or <a href="/day-two">Day 2 Registration</a> links added down.
                                                             </li>
                                                             <li>
-                                                                Enter your basic information and Select the events your going to participate. 
+                                                                Enter your basic information and Select the events which your going to participate. 
                                                             </li>
-                                                            <li>
-                                                                Select Yes, to participate in Pathology quiz (Section A) Starts at (9.00AM to 10.00AM).
-                                                            </li> 
-                                                            <li>
-                                                                Select Case or Poster Presenation, You can choose either one in Case Presenation or Poster Presenation, Since both events occur at the same time. Starts at (10.30AM to 12.30PM)
-                                                            </li> 
                                                             <li>
                                                                 Make the appropriate payment through Bank or NEFT transfer, The payment generates an <b>UPI Transaction Id</b><br/>
                                                                 Account name:<b>ACCUMBENS</b><br/>
@@ -188,7 +182,7 @@
                                                                 Or Soloman <a href="tel:+91 9497389450">+91 9497389450</a> to confirm your registration. 
                                                             </li>
                                                             <li>
-                                                                Registration price for EARLY BIRD - <b>Rs 300/- </b> (Registred in April 24th 2019 to May 25th 2019) and for LATE BIRD - <b>Rs 400/-</b> (Registred in May 25th 2019 to June 5th 2019).
+                                                                On Selecting Pathology Quiz, registration price for EARLY BIRD - <b>Rs 300/- </b> (Registred in April 24th 2019 to May 25th 2019) and for LATE BIRD - <b>Rs 400/-</b> (Registred in May 25th 2019 to June 5th 2019).
                                                             </li>
                                                         </ol>
                                                         <p><b>Any Queries</b></p>
