--- a/register.html
+++ b/register.html
@@ -182,7 +182,8 @@
                                                                 Or Soloman <a href="tel:+91 9497389450">+91 9497389450</a> to confirm your registration. 
                                                             </li>
                                                             <li>
-                                                                On Selecting Pathology Quiz, registration price for EARLY BIRD - <b>Rs 300/- </b> (Registred in April 24th 2019 to May 25th 2019) and for LATE BIRD - <b>Rs 400/-</b> (Registred in May 25th 2019 to June 5th 2019).
+                                                                On Selecting Pathology Quiz, registration price for EARLY BIRD - <b>Rs 300/- </b>per team (Registred in April 24th 2019 to May 25th 2019) and for LATE BIRD - <b>Rs 400/-</b> per team (Registred in May 25th 2019 to June 5th 2019).<br/>
+                                                               <b>Note:</b> Register in the name of one team member and send us a whatsapp message including the screenshot of the transaction and the names of the other 2 members!!!!!
                                                             </li>
                                                         </ol>
                                                         <p><b>Any Queries</b></p>
