--- a/events.html
+++ b/events.html
@@ -196,16 +196,16 @@
                                                     <div class="box--post_short_description">
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                <b>Surgery - Argor :</b> Suturing, Endoscopy
+                                                                <b>Surgery - Argor :</b> Suturing, the whole kit will be provided from <b>Ethicon company</b>, Registration price <b> Rs.600/-</b>
                                                             </li>
                                                             <li>
-                                                                <b>Medical - Arima :</b> Arterial Blood Gas Analysis, Case Discussion
+                                                                <b>General Medical - Arima :</b> Arterial Blood Gas Analysis by <b>Dr.Dillip Kumar</b> , Case Discussion By <b>MMCHRI GM Department</b>, Registration price <b> Rs.600/-</b>
                                                             </li>
                                                             <li>
-                                                                <b>Psychiatry - Ariston :</b> Behavioral Therapy on Substance Abuse, Sex Education, Digital Detoxification
+                                                                <b>Psychiatry - Ariston :</b> Behavioral Therapy on Substance Abuse, Sex Education, Digital Detoxification By <b>MMCHRI Psychiatry Department</b>, Registration price <b> Rs.400/-</b>
                                                             </li>
                                                             <li>
-                                                                <b>Mass Casualty Drill - Astra : </b>Live Demonstration by Professional Team
+                                                                <b>Mass Casualty Drill - Astra : </b> Live Demonstration by Professional Team from <b>Apollo hospital Dr.Davapalani</b> trained in UK, runs ER PG program and helped EMRI in modernization of GH ER, Registration price <b> Rs.800/-</b>
                                                             </li>
                                                         </ol>
                                                     </div>
