--- a/register.html
+++ b/register.html
@@ -198,7 +198,7 @@
                         </section>
                         <div class="back--top_link">
                             <div class="in"> <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
-                            <div class="in"> <a href="/day-two">Day 2 Registration</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
+                            <div class="in"> <a href="https://app.accumbens.in/process/day-two">Day 2 Registration</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
                            <div class="in"> <a href="#">back to top</a> <span class="back--top--link_line"> <span class="line--in"></span> </span></div>
                         </div>
                         <span class="bottom--triger"></span>
