--- a/events.html
+++ b/events.html
@@ -170,6 +170,9 @@
                                                             <li>
                                                                 Section C - Poster Presenation, Choose your favourite topic, Reveal your talent and win prizes worth over <b>Rs 5,000</b></br>Starts at (10.00AM to 12.30PM)
                                                             </li>
+                                                            <li>
+                                                                Certificates will be given for all the participations in Pathology Quiz, Case &  Poster Presenation
+                                                            </li>
                                                         </ol>
                                                         <p><b>NOTE:</b></p>
                                                         <ol class="p" style="padding-left:15px;">
@@ -206,6 +209,9 @@
                                                             </li>
                                                             <li>
                                                                 <b>Mass Casualty Drill - Astra : </b> Live Demonstration by Professional Team from <b>Apollo hospital Dr.Davapalani</b> trained in UK, runs ER PG program and helped EMRI in modernization of GH ER, Registration price <b> Rs.800/-</b>
+                                                            </li>
+                                                            <li>
+                                                                <b>15 Points</b> MGR University points will be accredited to all the participants of the workshops along with certificates
                                                             </li>
                                                         </ol>
                                                     </div>
