--- a/register.html
+++ b/register.html
@@ -160,10 +160,10 @@
                                                     <div class="box--post_short_description">
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                Accumbens is on 12th & 13th June 2019 and Registration is splitted for both day, <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> & <a href="/day-two">Day 2 Registration</a>
+                                                                Accumbens is on 12th & 13th June 2019 and Registration is splitted for both day, <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> & <a href="https://app.accumbens.in/process/day-two">Day 2 Registration</a>
                                                             </li>
                                                             <li>
-                                                                Click on the <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> or <a href="/day-two">Day 2 Registration</a> links added down.
+                                                                Click on the <a href="https://app.accumbens.in/process/day-one">Day 1 Registration</a> or <a href="https://app.accumbens.in/process/day-two">Day 2 Registration</a> links added down.
                                                             </li>
                                                             <li>
                                                                 Enter your basic information and Select the events which your going to participate. 
