--- a/about.html
+++ b/about.html
@@ -231,11 +231,11 @@
                         <div class="menu-services-menu-container">
                            <ul id="menu-services-menu-1" class="services--menu" style="opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
                               <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/">Home</a></li>
-                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/about">About</a></li>
-                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/events">Events</a></li>
-                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/sponsors">Sponsors</a></li>
-                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/contact">Contact</a></li>
-                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/register">Register</a></li>
+                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/about.html">About</a></li>
+                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/events.html">Events</a></li>
+                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/sponsors.html">Sponsors</a></li>
+                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/contact.html">Contact</a></li>
+                              <li class="menu-item menu-item-type-post_type menu-item-object-page"><a href="/register.html">Register</a></li>
                            </ul>
                         </div>
                      </div>
