--- a/index.html
+++ b/index.html
@@ -202,30 +202,30 @@
                                                 <span class="number-of-slide"> 01 </span>
                                                 <h3>About Accumbens</h3>
                                                 <span class="slide--divider"></span>
-                                                <a class="read--more" href="/about">Read more</a>
+                                                <a class="read--more" href="/about.html">Read more</a>
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent1">
                                                 <span class="number-of-slide"> 02 </span>
                                                 <h3>Event Details</h3>
                                                 <span class="slide--divider"></span>
-                                                <a class="read--more" href="/events">Read more</a>
+                                                <a class="read--more" href="/events.html">Read more</a>
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent2">
                                                 <span class="number-of-slide"> 03 </span>
                                                 <h3>Event Sponsors</h3>
                                                 <span class="slide--divider"></span>
-                                                <a class="read--more" href="/sponsors">Read more</a>
+                                                <a class="read--more" href="/sponsors.html">Read more</a>
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent3">
                                                 <span class="number-of-slide"> 04 </span>
                                                 <h3>Any Queries</h3>
-                                                <span class="slide--divider"></span> <a class="read--more" href="/contact">Read more</a>
+                                                <span class="slide--divider"></span> <a class="read--more" href="/contact.html">Read more</a>
                                              </div>
                                              <div class="carousel-cell buttonNav target" data-selector=".carouselContent4">
                                                 <span class="number-of-slide"> 05 </span>
                                                 <h3>Online Register</h3>
                                                 <span class="slide--divider"></span>
-                                                <a class="read--more" href="/register">Read more</a>
+                                                <a class="read--more" href="/register.html">Read more</a>
                                              </div>
                                           </div>
                                        </div>
