--- a/sponsors.html
+++ b/sponsors.html
@@ -148,20 +148,22 @@
                         </section>
                         <section class="hidden--content">
                            <section class="section">
-                              <div class="inner">
-                                 <div class="container grid--content">
-                                    <div class="row grid--items grid">
-                                       <div class="col-12 col-md-6 col-lg-4 col-xl-3 box--logo element-item filter13 ">
-                                          <div class="box--image_in">
-                                             <div class="box---image_first"> <img width="400" height="141" src="./img/spon/sri-kumaran.png" class="attachment-people-thumb size-people-thumb wp-post-image" alt="" 
-                                                srcset="./img/spon/sri-kumaran.png" sizes="(max-width: 400px) 100vw, 400px" /></div>
-                                          </div>
-                                       </div>
-                                       <div class="col-12 col-md-6 col-lg-4 col-xl-3 box--logo element-item filter12 ">
-                                          <div class="box--image_in">
-                                             <div class="box---image_first"> <img width="400" height="141" src="./img/spon/fryo.png" 
-                                                class="attachment-people-thumb size-people-thumb wp-post-image" alt=""
-                                                 srcset="./img/spon/fryo.png" sizes="(max-width: 400px) 100vw, 400px" /></div>
+                              <div class="inner desktopContent">
+                                 <div class="container">
+                                    <div class="row">
+                                       <div class="col-12 col-lg-7 service--description first--box" style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
+                                          <div class="box--post_text-content">
+                                             <div class="box--post_short_description">
+                                                <ol class="p" style="padding-left:15px;">
+                                                   <li>Kumaran Silks</li>
+                                                   <li>Green Trends</li>
+                                                   <li>Rajam Shetty & Co</li>
+                                                   <li>Bhatia</li>
+                                                   <li>Team Trans Logistics</li>
+                                                   <li>Beekeys Logistics</li>
+                                                   <li>Geekeys Logistics</li>
+                                                </ol>
+                                             </div>
                                           </div>
                                        </div>
                                     </div>
