--- a/sponsors.html
+++ b/sponsors.html
@@ -154,7 +154,7 @@
                                        <div class="col-12 col-lg-7 service--description first--box" style="visibility: inherit; opacity: 1; transform: matrix(1, 0, 0, 1, 0, 0);">
                                           <div class="box--post_text-content">
                                              <div class="box--post_short_description">
-                                                <ol class="p" style="padding-left:15px;">
+                                                <ol class="h1" style="padding-left:45px;">
                                                    <li>Kumaran Silks</li>
                                                    <li>Green Trends</li>
                                                    <li>Rajam Shetty & Co</li>
