--- a/events.html
+++ b/events.html
@@ -199,7 +199,7 @@
                                                     <div class="box--post_short_description">
                                                         <ol class="p" style="padding-left:15px;">
                                                             <li>
-                                                                <b>Surgery - Argor :</b> Suturing, the whole kit will be provided from <b>Ethicon company</b>, Registration price <b> Rs.600/-</b>
+                                                                <b>Surgery - Argor :</b> Suturing, the whole kit will be provided, Registration price <b> Rs.600/-</b>
                                                             </li>
                                                             <li>
                                                                 <b>General Medical - Arima :</b> Arterial Blood Gas Analysis by <b>Dr.Dillip Kumar</b> , Case Discussion By <b>MMCHRI GM Department</b>, Registration price <b> Rs.600/-</b>
