--- a/events.html
+++ b/events.html
@@ -189,7 +189,10 @@
                                                                Case & Poster Presenation, Last Date to Submit Abstract is 25th May 2019.
                                                             </li>
                                                             <li>
-                                                                <b>Spot Registration</b> will Cost <b>Rs.500/-</b>
+                                                                <b>Spot Registration Only for Quiz</b> will Cost <b>Rs.500/-</b>
+                                                            </li>
+<li>
+                                                                <b>No Spot Registration for Case and Poster Presentation</b>
                                                             </li>
                                                         </ol>
                                                     </div>
