--- a/events.html
+++ b/events.html
@@ -192,7 +192,7 @@
                                                                 <b>Spot Registration Only for Quiz</b> will Cost <b>Rs.500/-</b>
                                                             </li>
 <li>
-                                                                <b>No Spot Registration for Case and Poster Presentation</b>
+                                                                <b>No Spot Registration</b> for Case & Poster Presentation
                                                             </li>
                                                         </ol>
                                                     </div>
