--- a/events.html
+++ b/events.html
@@ -189,7 +189,7 @@
                                                                Case & Poster Presenation, Last Date to Submit Abstract is 25th May 2019.
                                                             </li>
                                                             <li>
-                                                                <b>Spot Registration Only for Quiz</b> will Cost <b>Rs.500/-</b>
+                                                                <b>Spot Registration</b> Only for Quiz and it will Cost <b>Rs.500/-</b>
                                                             </li>
 <li>
                                                                 <b>No Spot Registration</b> for Case & Poster Presentation
